Add type stubs for Odoo

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [mypy]
-custom_typeshed_dir = ~/typeshed  # Temporary
+custom_typeshed_dir = typeshed
 
 ignore_missing_imports = True
 check_untyped_defs = True
