--- a/tox.ini
+++ b/tox.ini
@@ -11,5 +11,5 @@ deps =
 commands =
     py3: mypy odoo_repl
     py3: mypy --py2 odoo_repl
-    py3: black --check odoo_repl
-    flake8 odoo_repl
+    py3: black --check odoo_repl odoo
+    flake8 odoo_repl odoo
