[ADD] Write Mypy plugin for typechecking Odoo's more dynamic bits

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,7 @@
 # -*- conf -*-
 [mypy]
+plugins = ./mypy_odoo.py
+
 # If this config is in mypy.ini instead of setup.cfg, and mypy is launched
 # from Emacs, and custom_typeshed_dir is a relative path, then mypy crashes
 # So for now this will have to do
