--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,8 @@ deps =
     py3: black
 
 commands =
-    py3: mypy odoo_repl
-    py3: mypy --py2 odoo_repl
-    py3: black --check odoo_repl odoo
+    py3: mypy odoo_repl odoo mypy_odoo.py
+    py3: mypy --py2 odoo_repl odoo
+    py3: black --check odoo_repl odoo mypy_odoo.py
+    py3: flake8 mypy_odoo.py
     flake8 odoo_repl odoo
