[FIX] Make ignored missing imports specific

--- a/mypy.ini
+++ b/mypy.ini
@@ -8,7 +8,6 @@ plugins = ./mypy_odoo.py
 custom_typeshed_dir = ~/odoo_repl/typeshed
 
 # Inclusive
-ignore_missing_imports = True
 check_untyped_defs = True
 
 # Basic
@@ -29,3 +28,15 @@ no_implicit_reexport = True
 # Extra
 strict_equality = True
 warn_unreachable = True
+
+[mypy-lxml.*]
+ignore_missing_imports = True
+
+[mypy-pygments.*]
+ignore_missing_imports = True
+
+[mypy-bs4.*]
+ignore_missing_imports = True
+
+[mypy-psycopg2.*]
+ignore_missing_imports = True
