[FIX] Specify python version for mypy

--- a/mypy.ini
+++ b/mypy.ini
@@ -2,6 +2,9 @@
 [mypy]
 plugins = ./mypy_odoo.py
 
+# Odoo minimum
+python_version = 3.5
+
 # If this config is in mypy.ini instead of setup.cfg, and mypy is launched
 # from Emacs, and custom_typeshed_dir is a relative path, then mypy crashes
 # So for now this will have to do
