[IMP] Use development version of mypy

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,35 +1,10 @@
 # -*- conf -*-
 [mypy]
 plugins = ./mypy_odoo.py
-
-# Odoo minimum
 python_version = 3.5
-
-# If this config is in mypy.ini instead of setup.cfg, and mypy is launched
-# from Emacs, and custom_typeshed_dir is a relative path, then mypy crashes
-# So for now this will have to do
-custom_typeshed_dir = ~/odoo_repl/typeshed
-
-# Inclusive
+strict = True
 check_untyped_defs = True
-
-# Basic
-warn_redundant_casts = True
-no_implicit_optional = True
-disallow_subclassing_any = True
-warn_unused_configs = True
-
-# Strict
-disallow_any_generics = True
-disallow_untyped_calls = True
-disallow_untyped_defs = True
-disallow_incomplete_defs = True
-disallow_untyped_decorators = True
-warn_return_any = True
-no_implicit_reexport = True
-
-# Extra
-strict_equality = True
+warn_unused_ignores = False
 warn_unreachable = True
 
 [mypy-lxml.*]
