--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py3, py27
 deps =
     lxml
     flake8
-    py3: mypy
+    py3: git+https://github.com/python/mypy@7af3191246c17a8580acd3b6336f35b02de85e7e#egg=mypy
     py3: black
 
 commands =
