[IMP] Move flake8 config into tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -14,3 +14,8 @@ commands =
     py3: black --check odoo_repl odoo mypy_odoo.py
     py3: flake8 mypy_odoo.py
     flake8 odoo_repl odoo
+
+[flake8]
+max-line-length = 88
+extend-ignore = E203
+exclude = .tox
