--- a/mypy.ini
+++ b/mypy.ini
@@ -15,3 +15,6 @@ ignore_missing_imports = True
 
 [mypy-psycopg2.*]
 ignore_missing_imports = True
+
+[mypy-IPython.*]
+ignore_missing_imports = True
